deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: deployment-yolo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-yolo
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-yolo
        # env: dev
        # checks: passed
    spec:
      containers:
      - image: 596906176357.dkr.ecr.ap-northeast-2.amazonaws.com/opencv-yolo-stream:0.5
        imagePullPolicy: Always
        name: app-yolo
        ports:
        - containerPort: 4455
